# showz

./: Cargo.toml  LICENSE
schemas/: 01_topics.sql  02_episodes.sql  03_episodes.sql  04_people.sql
src/: handlers.rs  main.rs  types.rs
src/schema/: 01_topics.sql  02_episodes.sql  03_episodes.sql
